--- a/client/wedding-letter/package.json
+++ b/client/wedding-letter/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "swr": "^2.3.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -19,9 +23,13 @@
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.4",
     "typescript": "^5.8.2"
   },
   "packageManager": "yarn@4.7.0"
